<resources>
    <string name="app_name">My Application</string>
    <string name="img_description">This is an image</string>
    <string name="menu_checkbox_undo">Undo</string>
    <string name="menu_add_5_items">Add 5 items</string>
    <string name="button_undo">undo</string>
    <string name="tvProductText">Item: </string>
    <string name="tvQtyText">Qty: </string>
    <string name="tvDateText">Next Expiry Date: </string>
    <string name="tvExpiryDateText">Expiry Date: </string>
    <string name="tvDaysLeftText">Days Left: </string>
    <string name="intro_text">It seems you haven\'t scanned any items yet..\n\n
        Let\'s start by adding your first product,\n
        starting your SpoilAlert journey!\n\n\n\n\n\n\n\n\n
        Slide the menu into view by \nswiping the Tab to the left.</string>
    <string name="manual_scan">Manual Scan</string>
    <string name="addProductName">Product Name not found, Please update:</string>
    <string name="addProductBrand">Product Brand not found, Please update:</string>
    <string name="addProductImage">Product Image not found, Please add an Image</string>
    <string name="updateProductName">Update Product Name:</string>
    <string name="updateProductBrand">Update Product Brand:</string>
    <string name="updateImageSucceed">Image Updated</string>
    <string name="stopScanReturnHome">Scanning has been stopped, returning to home screen.</string>
    <string name="customProductDetected">Custom Product Detected</string>
    <string name="customBarcodeDetected">Item not found, please confirm barcode</string>
    <string name="add_custom_product">Name:</string>
    <string name="nutriscore_select">Please select a Nutri-Score for this product</string>
    <string name="settings">Settings</string>
    <string name="settings_general">General</string>
    <string name="setting_side_bar_menu_size">Side Bar Menu Size:</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_menu_type">Menu Type</string>
    <string name="setting_long_notification_enabled">Long notification enabled</string>
    <string name="setting_short_notification_enabled">Short notification enabled</string>
    <string name="setting_short_notification_days">Short notification days</string>
    <string name="setting_notification_days">Notification lead time</string>
</resources>