<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:padding="4dp"
    android:background="@drawable/rounded_edge_product"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/tvTitleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/prodInfo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorTitle"
            android:padding="8dp"
            />

        <ImageView
            android:id="@+id/prodInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/ivArrow"
            android:layout_centerVertical="true"
            android:contentDescription="@string/img_description"
            android:src="@drawable/ic_menu_info"
            />

        <ImageView
            android:id="@+id/ivArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/img_description"
            android:src="@drawable/ic_arrow_down"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tvTitleLayout"
        >

        <TextView
            android:id="@+id/tvQtyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvQtyText"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"/>

        <TextView
            android:id="@+id/tvProductQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tvQtyText"
            />

        <TextView
            android:id="@+id/tvDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:text="@string/tvDateText"
            android:textStyle="bold"
            android:paddingEnd="4dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvspoildate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tvDateText"
            />



    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHeadlines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainLayout"
        android:visibility="gone" />



</RelativeLayout>